# agent-doc-system

./: .gitflow  .gitignore  .pre-commit-config.yaml  AGENT_NAMING_QUICKSTART.md  AGENT_SETUP_INSTRUCTIONS.md  AGORA_MOIRAI_README.md  CLAUDE.md  MIGRATION_ANNOUNCEMENT.md  MIGRATION_CHECKLIST.md  MIGRATION_GUIDE_v2.md  README.md  REVOLUTION_COMPLETE.md  Scientific Research on Multi-Agent Coordination Sy.md  announce_protocol_v5.0.1.py  mcp_database_schema.sql  package-lock.json  package.json  pyproject.toml  simple_announce.py  universal_agent_client.py
.agent_config/: agent_env.sh  agent_name.json
.claude/: SLASH_COMMANDS.md  USAGE_GUIDE.md  mcp_servers.json
.claude/chat_history/: README.md
.claude/commands/: agent_audit.md  agent_send.md  agent_validate.md  agent_workflow.md  chat_config.md  chat_export.md  chat_history.md
.claude/config/: agent_settings.json  chat_logging.json  command_routing.json  environments.json  permissions.json
.claude/core/: command_router.py
.claude/scripts/: agent_wrapper.py  chat_export_direct.sh  chat_logger.py  claude_aliases.sh  claude_command_wrapper.sh  claude_slash_integration.sh  claude_wrapper.sh  install_chat_logging.sh  mcp_server.py  slash_command_handler.py  test_slash_commands.sh
.claude/workflows/: chat_management.yml
.github/workflows/: ci.yml
agent_communication/config/: settings.py
agent_communication/core/: protocol.py
docs/: agent_communication.md  agent_onboarding.md  documentation_protocol.md  example.md  example_agent_messages.json  feedback_framework.md  git_workflow.md
framework/: __init__.py
framework/agent_communication/: README.md  __init__.py  agora_integration.py  check_messages.py  feedback_agent.py  natural_agent.py  spacetime_operations.py  verify_connection.py
framework/docs/: agent_messaging_guide.md  agent_naming_system.md  agent_onboarding.md  agent_pain_points.md  documentation_protocol.md  mcp_setup_claude_code.md  security_architecture.md  ui_agent_guide.md
framework/mcp_integration/: __init__.py  agora_client.py  agora_mcp_server.py  documentation_agora_client.py  mcp_config.json
framework/moirai_core/: __init__.py  overseer.py  project_planner.py  task_coordinator.py
framework/schemas/: agent_communication.yml  document_protocol.yml  enhanced_feedback_schema.yml  feedback_framework.yml  (+2 more)
project_docs/: agora_v5_migration_requirements.md  agora_v5_protocol.md  id_generation_root_cause_analysis.md  onboarding_troubleshooting_guide.md  technical_analysis_agent_onboarding_issues.md  v5_migration_guide.md
schemas/: document_protocol.yml
scripts/: agent_communication.py  doc_validation.sh  generate_example_doc.py  setup_cursor.sh  validate_agent_messages.py
tests/: __init__.py  conftest.py  test_enhanced_protocol.py  test_models.py
(+50 files in other folders)
